# aquasense

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: camp_keys.txt  correct_ans_test_1_cert.txt  data.csv
scripts/: visualize.py
